<resources>
    <string name="app_name">Shravani Mela</string>
    <string name="app_name_Display">Shravani Mela\nBhagalpur 2024</string>
    <string name="subtext_verify">Please enter your mobile number to receive an One Time Password.</string>
    <string name="wait_for_autoVerification">Wait while we are automatically authenticating your Number</string>
    <string name="otp_subtext">OTP has been sent to you on your mobile phone. Please enter it below</string>
    <string name="rationale_doc_picker">We need this permission to read documents from device.</string>
    <string name="rationale_photo_picker">We require this permission to select photo from gallery and camera.</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="urgent_notifcation">Urgent Notification</string>
    <string name="ambulance">Ambulance</string>
    <string name="atm">Atm</string>
    <string name="help_line">Helpline</string>
    <string name="bathroom">Bathroom</string>
    <string name="disaster">Disaster Helpline</string>
    <string name="doctor">Doctor</string>
    <string name="drinking_water">Drinking Water</string>
    <string name="electric">Electric Helpline</string>
    <string name="food_rate">Food Rate</string>
    <string name="food_inspector">Food Inspector</string>
    <string name="medical_store">Medical Store</string>
    <string name="parking">Parking</string>
    <string name="medium_crowd">Medium Crowd</string>
    <string name="crowd_status">Crowd Status</string>
    <string name="sultangunj">Sultangunj</string>
    <string name="heavy_crowd">Heavy Crowd</string>
    <string name="live_arti">Watch Live Video</string>
    <string name="police_station">Police Station</string>
    <string name="rest_room">Rest room</string>
    <string name="toilet">Toilet</string>
    <string name="waterfall">Waterfall</string>
    <string name="alert">Alerts / Notifications</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_sos">Map</string>
    <string name="sos1">Help! I am in Danger</string>
    <string name="sos2">Help! I am being Kidnapped</string>
    <string name="sos3">Help! I am lost</string>
    <string name="safe_now">Now I am Safe</string>
    <string name="title_activity_places">Map</string>
    <string name="open_g_map">Navigate</string>
    <string name="view_on_gmap">View on Google Map</string>
    <string name="sos">SOS</string>
    <string name="register_now">Register Now</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="welcome_note">Bhagalpur Administration welcomes you to Shravani mela 2024 celebrating from 22nd July. This app is dedicated towards pilgrims safe and comfortable journey to Baba Dham.</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="donts">Don\'ts</string>
    <string name="dos">DOs</string>
    <string name="skip">Skip</string>
    <string name="dos_list">1.	Always move in group \n2. Be sure to use torch and sticks during the night in the wild and mountainous pathways.
\n3.	Do not associate with strangers
\n4.	Protect your baggage security by your own.
\n5.	Female travelers are requested to stay in touch with their male hitchhikers in the night.
\n6.	In case of any sudden situation inform the local police station or the police in place of the place and cooperate with the police.
\n7.	Remember your mobile phone or home address
\n8.	All control room have police assistance center, use it.
\n9.	All control rooms have free mobile charging system, you can charge your mobile phones.
\n10.	Use the official Dharamsala or the Free Private Dharshala to stay.
\n11.	Send Kanwaria to the nearest Police Help Center who get lost.
\n12.	Do not go on rumor
</string>
    <string name="photo_instruction">1. Winner will receive a Certificate from\n   <B>Bhagalpur District Administration</B>\n \n 2. Only 1 entry is allowed per day per Person \n   other entries will be ignored \n \n3. Winner will be listed in Pic of the Day section \n \n4. All the selected Photos will be displayed \n   in the Gallery Section \n \n5. Photo must be relevant to Shravani Mela \n \n6. District Admin decision will be final</string>
    <string name="do_not_list">1.	Kanwaria Bandhu do not go alone in the night.
\n2.	Do not eat any drug during travel.
\n3.	Female travelers are requested to not go alone in the night.
\n4.	Do not give your mobile number to any stranger
\n5.	Do not stay in a deserted and dark place.
\n6.	Do not pay more than the government rate on the food items.
\n7.	Do not accept any food given by an unknown person or Kanwaria.
\n8.	Do not give your mobile to any stranger to use.
</string>
    <string name="notifications">Notifications</string>
    <string name="control_room">Control Room</string>
    <string name="light_crowd">Light Crowd</string>
    <string name="emergency">Emergency</string>
    <string name="rate_chart">Rate Chart</string>
    <string name="find_places">Find Places</string>
    <string name="doctor_availability">Doctor\'s Availability</string>
    <string name="mela_help_line">Mela HelpLine</string>
    <string name="food_medical_inspector">Food/Medical Inspector</string>
    <string name="puja_samagari">Puja Samagari</string>
    <string name="medicine">Medicine</string>
    <string name="electric_main_title">श्रावणी मेला 2018 के लिए निम्नलिखित कामगारोंको दिनांक-27.07.2018 से दिनांक-27.08.2018 तक निम्नलिखित स्थलों पर अंकित समयानुसार अपने पूर्व के आवंटित कार्य
        एवं क्षेत्रों के अतिरिक्त कार्य करने का आदेश दिया जाता है। साथ ही इस अवधि में पड़नेवाले सभी साप्ताहिक अवकाश एवं सार्वजनिक अवकाश में भी सभी कामगार अपने कार्य पर उपस्थित रहेगें।
        सभी मानवबल विभागीय कामगार की देख-रेख में काम करेंगे।</string>
    <string name="electric_title1">कार्य क्षेत्र के ट्रांसफार्मर का नाम: चौक स्थित सभी ट्रांसफार्मर पार्वती मील बाहर भीतर दोनों, पीएचडी, स्टेशन, मालगोदाम, थाना के पास एवं ब्लॉक तक सभी ट्रांसफर्मर, लालकोठी</string>
    <string name="electric_subtitle1">मुखयालय (फ्यूजकॉल सेंटर): चौकबाजार(फ्यूजकॉल सेंटर) 7033095829</string>
    <string name="electric_title2">कार्य क्षेत्र के ट्रांसफार्मर का नाम: घाटरोड़, मोदीटोला,गोपाल गेट रोड़, अंदर एवं वाहर डोमासी गली काली स्थान, सीढ़ी घाट, बगीचा के सभी ट्रांसफार्मर</string>
    <string name="electric_subtitle2">मुखयालय (फ्यूजकॉल सेंटर): नई सीढी घाट विद्युत नियंत्रण कक्ष 7033095829</string>
    <string name="electric_title3">कार्य क्षेत्र के ट्रांसफार्मर का नाम: टी०पी० चौधरी,पुरानी दुर्गास्थान, चित्रा सिनेमा,जे०पी० पार्क, पेट्रोल पम्प, आदर्शनगर,सीतारामपुर,  शिवनन्दनपुर ,नयी दुर्गास्थान एवं मसदी के सभी ट्रांसफार्मर।</string>
    <string name="electric_subtitle3">मुखयालय (फ्यूजकॉल सेंटर): विद्युतनियंत्रण कक्ष, जेपीपार्क, सुलतानगंज 7033095829</string>
    <string name="electric_title4">आपातकालीन फ्यूज कॉल गैंगः- 24 घंटे कार्यरत रहेंगे।</string>
    <string name="electric_title5">उपरोक्त सभी कामगार अपने कनीय विद्युत अभियंता सुलतानगंज (शहरी) तथा कनीय विद्युत अभियन्ता (ग्रामीण) के साथ कार्य पर तैनात रहेंगे।</string>
    <string name="call">Call</string>
    <string name="centralizeContact">Centralized Contacts</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="prefered_lang_english">Select your preferred language</string>
    <string name="select_lang_hindi">अपनी पसंदीदा भाषा का चयन करें</string>
    <string name="medicine_inspector">Medicine Inspector</string>
    <string name="paramedic">Paramedic</string>
    <string name="duty_chart">Duty Chart</string>
    <string name="health">Health</string>
    <string name="health_centre">Health Centre</string>
    <string name="info_centre">Information Centre</string>
    <string name="petrol_pump">Petrol Pump</string>
    <string name="sanskritik_centre">Sanskritik Centre</string>
    <string name="shivir">Shivir</string>
    <string name="stay_place">Stay Place</string>
    <string name="vehicle_workshop">Vehicle Workshop</string>
    <string name="slide_to_more">Slide right to view menu</string>
    <string name="developed_by">Developed by\nNS Apps Innovations LLP</string>
    <string name="helpline_number">Shravani Mela Helpline</string>
    <string name="helpline_number_digit">7070747474</string>
    <string name="about_mela">About Shravani Mela</string>
    <string name="mela_description" />
    <string name="change_lang">Change Language</string>
    <string name="secure_ghats">Secure Ghats</string>
    <string name="road_map">Road Map</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="wait_for_auto_verification">Wait for Auto Verification</string>
    <string name="register_mobile">Register Mobile</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="donot_show">Don\'t Show Again</string>
    <string name="instruction">Instructions</string>
    <string name="note">Note</string>
    <string name="sos_instruction">1. Use this feature only in case of emergency \n2. Register mobile number before you ask for emergency help. </string>
    <string name="call_helpline">Call Helpline</string>
    <string name="panda_list">Panda List</string>
    <string name="hand_pump">Hand Pump</string>
    <string name="updateNotice">All the features will be activated by 15th July including Ganga Aarti.</string>
    <string name="made_in_bihar">MADE IN BIHAR</string>
    <string name="spe">[</string>
    <string name="verify_number">Mobile Verification</string>
    <string name="welcome_note_muz">Muzaffarpur Adminstration welcomes you to the prestigious Shravani Mela in the auspicious month of sawan 2022.</string>
    <string name="virtual_pooja">Virtual Pooja</string>
    <string name="live_aarti">Live Darshan</string>
    <string name="mela_route">Mela Route</string>
    <string name="gallery">Gallery</string>
    <string name="live_aarti_crowd_status">Live Aarti &amp; Crowd Status</string>
    <string name="pic_of_the_day">Pic of the Day</string>
    <string name="facility_contact">Facilities &amp; Contacts</string>
    <string name="upload">Upload</string>
    <string name="shravani_mela_event">Shravani Mela Events</string>
    <string name="register_yourself">Register YourSelf\n</string>
    <string name="how_to_reach">How to Reach</string>
    <string name="via_plane">Fly to Patna Airport (Jay Prakash Narayan International Airport):\n\nLocation: Patna, Bihar\nIATA Code: PAT\nDistance to Sultanganj: Approximately 200 km (124 miles)\nFly to Bagdogra Airport:\n\nLocation: Bagdogra, West Bengal\nIATA Code: IXB\nDistance to Sultanganj: Approximately 300 km (186 miles)\nFly to Gaya Airport:\n\nLocation: Gaya, Bihar\nIATA Code: GAY\nDistance to Sultanganj: Approximately 250 km (155 miles)\nFrom the Airport to Sultanganj:\n\nBy Taxi or Private Car: You can hire a taxi or book a private car from the airport to Sultanganj. This is the most convenient and direct option.\nBy Train: From Patna, you can take a train to Sultanganj. The Patna Junction railway station has frequent trains to Sultanganj.\nBy Bus: You can also take a bus from Patna to Sultanganj. Buses are available from the Patna bus stand to Bhagalpur, and from there, you can take a local bus or taxi to Sultanganj.</string>
    <string name="dharamshala">Dharamshala</string>
    <string name="fire_brigade">Fire Brigade</string>
    <string name="nearest">Nearest</string>
    <string name="via_aeroplane">Via. Aeroplane</string>
</resources>