<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient3"
    tools:context=".InstructionPage">



    <android.support.v4.view.ViewPager
        android:id="@+id/instruction_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/dots_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="20dp">

    </LinearLayout>

    <Button
        android:id="@+id/skip_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/noto_sans"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/background" />

    <Button
        android:id="@+id/dont_show"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/noto_sans"
        android:onClick="goToMainAndDoNotShow"
        android:text="@string/donot_show"
        android:textAllCaps="false"
        android:textColor="@color/background"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/roboto"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/background" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/splash_Screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient3">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/bree_serif"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/background"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bree_serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/background"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_note"
            android:textAlignment="center"
            android:textColor="@color/background"
            app:layout_constraintBottom_toTopOf="@+id/textView22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:alpha="0.8"
            android:fontFamily="@font/roboto"
            android:text="@string/developed_by"
            android:textAlignment="center"
            android:textColor="@color/background"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/roboto"
            android:onClick="goToMainSkip"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/roboto"
            android:onClick="readInstruction"
            android:text="@string/instruction"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.6"
            android:contentDescription="@string/app_name"
            app:layout_constraintDimensionRatio="w,11:16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hindu_pattern" />

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>